<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TableRow 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button 
            android:id="@+id/intent_comp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intent_comp"/>
        
        <Button 
            android:id="@+id/intent_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intent_action"/>
    </TableRow>
    
    <TableRow 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button 
            android:id="@+id/intent_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intent_filter"/>
    </TableRow>

</TableLayout>
